Changes since version 3.0.1
---------------------------

- Eliminated the source of deprecation warnings when E_STRICT is
  enabled.

- Added support for the Ice::Connection interface.

Changes since version 3.0.0
---------------------------

- Fixed a bug in the Slice parser that caused problems if an
  included file contained white space in the file name.

- Added source compatibility with PHP 5.1.2. A configure script for
  PHP 5.1.2 is provided as configure-5.1.2.gz.

Changes since version 2.1.2
---------------------------

- Removed ice_default() method from proxies.

- Added the proxy method ice_connectionId, which allows an application
  to control connection reuse.

- Ice_loadProfile now raises Ice_ProfileNotFoundException if a
  given profile is not found and Ice_ProfileAlreadyLoadedException
  if a profile has already been loaded.

- Added proxy methods to retrieve the proxy adapter id and endpoints
  (ice_getAdapterId() and ice_getEndpoints()) and to create a new
  proxy with a new adapter id or new endpoints (ice_newAdapterId() and
  ice_newEndpoints()).

- Added ice_communicator() and ice_toString() to proxies. The return
  value of ice_communicator() is always the value of $ICE.

- Ice.ObjectImpl is now an abstract class that cannot be instantiated.
  This change should be transparent to application code.

Changes since version 2.1.0
---------------------------

- Added -E option to the various Slice compilers to print preprocessor
  output on stdout.

- A crash occurred if the global variable $ICE was used before a
  profile was loaded. This now causes an error message.

- Attempting to print a proxy value resulted in a fatal error.
  This has been fixed so that printing a proxy displays it in
  stringified form.

Changes since version 2.0.0
---------------------------

- Added setDefaultContext() and getDefaultContext() to the
  Ice::Communicator interface. This allows a default context to be